--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "java.configuration.updateBuildConfiguration": "interactive",
-  "asciidoc.antora.enableAntoraSupport": false
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
